Roundcube Webmail SieveRules
============================

2010 09 29
==========
 * Add Internationalized Domain Name (IDNA) support (r4009)

2010 09 19
==========
 * Allow free entry of vacation alias addresses

2010 09 06
==========
 * Fix duplicate comparator listing

2010 07 03
==========
 * Update to Net_Sieve 1.3.0

2010 06 19
==========
 * Skin update after r3757

2010 06 15
==========
 * Update to Net_Sieve 1.2.2

2010 06 13
==========
 * Update skin r3733

2010 06 04
==========
 * Add support for %n and %d in host (r3701)

2010 04 24
==========
 * Add support for date extension

2010 04 19
==========
 * Update to Net_Sieve 1.2.1

2010 04 06
==========
 * Update to Net_Sieve 1.2.0

2010 03 27
==========
 * Use same folder path as RC by default

2010 03 06
==========
 * Use imap_connect after r3278

2010 02 14
==========
 * The Sender header is not always present, test From by default instead

2010 01 29
==========
 * Add hidden options to config file

2010 01 28
==========
 * Fix handeling of text in <> in adv editor

2009 12 30
==========
 * Fix default display when fileinto action is disabled

2009 12 10
==========
 * Add ruleset selector to advanced editor

2009 11 25
==========
 * Allow default headers, operators and flags to be overridden
 * Fix bug in body action

2009 11 16
==========
 * Allow file header to be overridden

2009 11 14
==========
 * Allow appending of original subject to vacation messages (requires variables
   extension in sieve)
 * Parse multiple email addresses when setting redirect

2009 11 09
==========
 * Fix bug in detection of vacation charset

2009 11 08
==========
 * Add support for multiple rulesets
 * Use core config function (WARNING: Complete re-write of config file!)
 * Some JS cleanup

2009 10 31
==========
 * Use frames to avoid full page reloads
 * Use rule cache to speed things up a little

2009 09 23
==========
 * Support folder name encoding
 * Support multiple hosts

2009 09 05
==========
 * Minor layout updates
